# Facial-Recognition

./: README.md  build.sh
.github/workflows/: cmake-multi-platform.yml
include/: main.hpp
src/: CMakeLists.txt  main.cpp
